[gd_scene load_steps=7 format=3 uid="uid://ccnte1ldtfsoa"]

[ext_resource type="Texture2D" uid="uid://tacgp6331bou" path="res://ui/healt.png" id="1_s1saf"]
[ext_resource type="PackedScene" uid="uid://dlajimkc33lpr" path="res://busStage/world.tscn" id="1_slp3n"]
[ext_resource type="Script" path="res://ui.gd" id="2_bxw0e"]
[ext_resource type="Theme" uid="uid://b73y4jutnwuue" path="res://themes/theme.tres" id="3_5kfhv"]

[sub_resource type="LabelSettings" id="LabelSettings_bsjr6"]
font_size = 96
font_color = Color(0.645551, 2.56296e-06, 4.81307e-07, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_70eqc"]
font_size = 40
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="MainWindow" type="Node2D"]

[node name="World" parent="." instance=ExtResource("1_slp3n")]

[node name="UI" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("2_bxw0e")

[node name="Screen" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Screen/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Screen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
texture = ExtResource("1_s1saf")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/Screen/VBoxContainer/HBoxContainer/TextureRect"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -26.0
offset_right = -55.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_5kfhv")
value = 75.0
show_percentage = false

[node name="Label" type="Label" parent="UI/Screen/VBoxContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -70.0
offset_right = 104.0
offset_bottom = 62.0
grow_vertical = 2
text = "+"
label_settings = SubResource("LabelSettings_bsjr6")

[node name="MarginContainer" type="MarginContainer" parent="UI/Screen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="UI/Screen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
texture = ExtResource("1_s1saf")
expand_mode = 2
flip_h = true

[node name="Label" type="Label" parent="UI/Screen/VBoxContainer/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100z≈Ç"
label_settings = SubResource("LabelSettings_70eqc")

[connection signal="change_health" from="World/Player" to="UI" method="_on_player_change_health"]
[connection signal="change_kasa" from="World/Player" to="UI" method="_on_player_change_kasa"]

[editable path="World"]
